pain and suffering and crying :((((